--- a/connectedin/perfis/templates/index.html
+++ b/connectedin/perfis/templates/index.html
@@ -6,5 +6,18 @@
 </head>
 <body>
     <h1>Bem-vindo ao ConnectedIN</h1>
+    {% now "d/m/Y"%}
+    <br>
+    {% if perfis %}
+    <ul>
+        {% for perfil in perfis%}
+            <li>
+                <a href="{% url 'exibir' perfil.id %}">{{ perfil.nome|upper }} </a> / {{ perfil.email }}
+            </li>
+        {%  endfor % %}
+    </ul>
+    {% else %}
+    <p>Nenhum perfil encontrado</p>
+    {% endif %}
 </body>
 </html>
