--- a/connectedin/perfis/templates/perfil.html
+++ b/connectedin/perfis/templates/perfil.html
@@ -5,7 +5,7 @@
 		<title>ConnectedIn</title>
 	</head>
 	<body>
-		<h1>Detalhe Perfil</h1>
-		nome: {{perfil.nome}}, email: {{perfil.email}}, telefone: {{perfil.telefone}}, empresa: {{perfil.nome_empresa}}
+		<h1>Detalhe Perfil: {{ perfil.nome }}</h1>
+        <a href="{ url 'convidar' perfil.id}"></a>
 	</body>
 </html>
