--- a/connectedin/perfis/templates/index.html
+++ b/connectedin/perfis/templates/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <ul class="list-group">
                     {% for contato in perfil_logado.contatos.all %}
-                        <a href="{% url 'exibir' contato.id %}" class="list-group-item">{{ contato.nome }} // {{ contato.name }}</a>
+                        <a href="{% url 'exibir' contato.id %}" class="list-group-item">{{ contato.nome }} // {{ contato.email }}</a>
                     {% endfor %}
                 </ul>
             {% else %}
