--- a/connectedin/usuarios/templates/registrar.html
+++ b/connectedin/usuarios/templates/registrar.html
@@ -7,20 +7,27 @@
 
         <input id="id_email" name="email" type="text"
         class="form-control" placeholder="Email *"
-        required >
+        value="{{form.email.value}}" required autofocus>
         <input id="id_nome" name="nome" type="text"
         class="form-control" placeholder="Nome *"
-        required>
+        value="{{ form.nome.value }}" required>
         <input id="id_senha" name="senha" type="password"
         class="form-control" placeholder="Senha*"
-        required>
+        required >
         <input id="id_telefone" name="telefone" type="text"
-        class="form-control", placeholder="Telefone">
-        <input id="id_nome_empresa" nome="nome_empresa" type="text"
-        class="form-control" placeholder="Empresa">
+        class="form-control" placeholder="Telefone" value="{{ form.telefone.value }}">
+
+        <input id="id_nome_empresa" name="nome_empresa" type="text"
+        class="form-control" placeholder="Empresa" value="{{ form.nome_empresa.value }}">
 
         <hr>
 
+         {% if form.errors %}
+          <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            {{form.non_field_errors}}
+          </div>
+        {% endif %}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Registrar</button>
 
     </form>
